# HAILIB

./: CMakeLists.txt  README.md  test.py
examples/: BMPtoHAI.cpp  HAItoBMP.cpp
include/: compress.h  hailib.h  header.h  image.h  io.h
src/: compress.cpp  hailib.cpp  image.cpp  io.cpp
